--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "tandem-test-slukina",
   "version": "1.0.0",
   "main": "index.js",
+  "homepage": "https://codefornia.github.io/tandem-test-app",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --open",
-    "build": "webpack"
+    "build": "webpack",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "author": "Irina Slukina",
   "license": "ISC",
@@ -23,6 +26,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.8.1",
     "file-loader": "^6.2.0",
+    "gh-pages": "^6.1.1",
     "html-webpack-plugin": "^5.6.0",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
